bz #1189480 - Rabbitmq cluster remains partitioned after short network partition incident
https://bugzilla.redhat.com/show_bug.cgi?id=1189480

This sets TCP_USER_TIMEOUT on all rabbitmq sockets to 5000ms.  This
should allow cluster failures to be noticed quickly, as well as any
clients that might disappear on us.  That allows autodelete queues to
get cleaned up earlier as well.

--- a/puppet/modules/quickstack/data/RedHat.yaml
+++ b/puppet/modules/quickstack/data/RedHat.yaml
@@ -325,6 +325,8 @@ quickstack::pacemaker::params::swift_public_vip: "%{hiera('swift_vip_public')}"
 quickstack::pacemaker::params::swift_user_password: "%hiera('swift_user_password')}"
 
 quickstack::pacemaker::rabbitmq::inet_dist_listen: '35672'
+quickstack::pacemaker::rabbitmq::inet_default_connect_options: '[{raw,6,18,<<5000:64/native>>}]'
+quickstack::pacemaker::rabbitmq::inet_default_listen_options: '[{raw,6,18,<<5000:64/native>>}]'
 
 quickstack::pacemaker::swift::swift_internal_vip: "%{hiera('swift_vip_internal')}"
 quickstack::pacemaker::swift::swift_storage_device: 'device1'
